# VoiceSync

./: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  test_tts.py  tts_engine.py
deploy/: DEPLOY_GUIDE.md  nginx.conf
pkuseg_dummy/: pyproject.toml
pkuseg_dummy/pkuseg/: __init__.py
test_environment/: index.html  player.css  player.js
umbraco-plugin/: README.md  VoiceSyncHandler.cs  VoiceSyncPoller.cs  voicesync-player.cshtml
wp-plugin/: voicesync.php
